[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenario/Elements/Repair/RepairStation.gd" type="Script" id=1]
[ext_resource path="res://Scenario/Elements/Repair/Station.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 75, 94 )

[node name="RepairStation" type="StaticBody2D" groups=[
"bullet",
]]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="." groups=[
"bullet",
]]
polygon = PoolVector2Array( -75, -95, -75, 63, -69, 63, -69, -77, 69, -77, 69, 63, 75, 63, 75, -95 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
